--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,6 +30,7 @@ dependencies {
     compile 'com.jakewharton:butterknife:8.5.1'
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.5.1'
     compile 'com.facebook.stetho:stetho:1.4.2'
-
+    //added design package for files
+    compile 'com.android.support:design:25.0.0'
 
 }
